Fix dropdown overflowing the card

--- a/app/src/assets/style/components.scss
+++ b/app/src/assets/style/components.scss
@@ -1,5 +1,5 @@
 .card {
-  // overflow: auto;
+  overflow: visible;
   border-radius: $radius;
 
   .card-header {
